--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,7 +46,7 @@ services:
     environment:
       PMA_HOST: mysql
       PMA_ARBITRARY: 1
-      PMA_PORT: ${MYSQL_PORT}
+      PMA_PORT: 3306
       PMA_USER: ${DB_USERNAME}
       PMA_PASSWORD: ${DB_PASSWORD}
     restart: unless-stopped
